color contrast fixed 1

--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -1,5 +1,5 @@
 :root { 
-    --primary-color: #0599c2;
+    --primary-color: #124454;
     --secondary-color: rgba(255, 255, 255, 0.789);
     --accent1-color: #8ec4dc;
     --accent2-color: #06657f;
